--- a/uploadPage.html
+++ b/uploadPage.html
@@ -16,11 +16,7 @@
     <div class="upload_outer">
         <label for="file_upload">
         <div class="upload_inner">
-            <i class="material-icons" style="font-size:48px;color:rgb(236, 236, 236);">file_upload</i> Upload WIF File
-            <!--<img src="folder_icon.png" alt="File icon" style="float:left;width:50px;height:50px;"> Upload WIF File.
-            <i class="material-icons">file_upload</i>
-         <i class="material-icons" style="font-size:60px;color:red;">cloud</i>
-          <h3><img src="folder_icon.svg" alt="Smiley face" style="float:left;width:70px;height:70px;">Upload a WIF File</h3> </div> -->
+            <img src="1.svg" alt="Upload WIF" style="width:350px;height:70px;"></a>
         </div>
     </label>
     <br>
