--- a/visualPage.html
+++ b/visualPage.html
@@ -11,7 +11,6 @@
 <body>
     <h1 class="title">WIF File Visualiser</h1>
 
-    <h3 class="instructionVisual">Please Refresh page after changing window size</h3>
     <div class="column_left">
         
             <body id="canvas" onload='colors()'>
@@ -28,16 +27,13 @@
     <div class="column_right">
         <div class="button-group">
             <a role=button class="button" id="upload" onclick="location.href='uploadPage.html';">
-                <i class="material-icons" style="font-size:48px;color:white;">file_upload</i>
-                View other WIF</a>
+                <img src="1.svg" alt="Upload WIF" style="width:350px;height:70px;"></a>
 
             <a role=button class="button" id="download">
-                <i class="material-icons" style="font-size:48px;color:white;">file_download</i>
-                Download</a>
+                <img src="2.svg" alt="Upload WIF" style="width:350px;height:70px;"></a>
 
             <a role=button class="button" id="edit">
-                <i class="material-icons" style="font-size:44px;color:white;">mode_edit</i>
-                Edit Color</a>
+                <img src="3.svg" alt="Upload WIF" style="width:350px;height:70px;"></a>
         </div>
         <div id="myModal" class="modal">
 
