--- a/visualPage.html
+++ b/visualPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
-    <title>29th January Test Page</title>
+    <title>WIF Visualiser</title>
     <script src="color_test.js" defer></script>
 </head>
 <body>
@@ -40,10 +40,10 @@
             <!-- Modal content -->
             <div class="modal-content">
               <span class="close">&times;</span>
-              <p class="text"> Select Color to Change: </p>
+              <p class="text"> Select Colour to Change: </p>
               <input type="color" id='colorWeft' value="#ff0000" />
               <input type="color" id='colorWarp' value="#ff0000" />
-              <a role=button class="button_apply" id="applyColor">Apply Color Changes</a>
+              <a role=button class="button_apply" id="applyColor">Apply Colour Changes</a>
             </div>
           
         </div>
