--- a/uploadPage.html
+++ b/uploadPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="style.css">
-    <title>29th January Test Page</title>
+    <title>WIF Visualiser</title>
     <script src="color_test.js" defer></script>
 </head>
 <body>
